2010-01-12  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/42699
	* cse.c (cse_insn): Optimize lhs ZERO_EXTRACT if only CONST_INTs are
	involved.

2010-01-12  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/mips/iris6.h (SUBTARGET_DONT_WARN_UNUSED_SPEC,
	SUBTARGET_WARN_UNUSED_SPEC): Move ...
	config/mips/iris.h (SUBTARGET_DONT_WARN_UNUSED_SPEC,
	SUBTARGET_WARN_UNUSED_SPEC): ... here
	* config/mips/iris5.h (LIBGCC_SPEC): Define.

2010-01-12  Julian Brown  <julian@codesourcery.com>

        * config/arm/neon-schedgen.ml (Utils): Don't try to
	open missing module.
        (find_with_result): New.

2010-01-12  Jakub Jelinek  <jakub@redhat.com>

	PR debug/42662
	* simplify-rtx.c (simplify_relational_operation_1): Avoid invalid rtx
	sharing when canonicalizing ({lt,ge}u (plus a b) b).

	PR tree-optimization/42645
	* tree-inline.c (processing_debug_stmt): Move earlier.  Make static.
	(remap_ssa_name): If processing_debug_stmt and name wasn't found in
	decl_map, set processing_debug_stmt to -1 and return name without
	any remapping.

2010-01-11  Dave Korn  <dave.korn.cygwin@gmail.com>

	* doc/install.texi (Specific#x-x-cygwin): Document minimum required
	binutils version, and reword target configuration description.

2010-01-11  Andy Hutchinson  <hutchinsonandy@gcc.gnu.org>

	* config/avr/avr.h (LINKER_NAME): Remove. 

2010-01-11  Janis Johnson  <janis187@us.ibm.com>

	PR target/42416
	* config/rs6000/rs6000.c (rs6000_override_options): On targets
	that support VSX, warn for -mno-altivec if vsx is not disabled,
	and disable vsx.

2010-01-11  Joseph Myers  <joseph@codesourcery.com>
	    Shujing Zhao  <pearly.zhao@oracle.com>
	
	PR translation/42469
	* common.opt (Wframe-larger-than=, fcompare-debug=, fdbg-cnt=,
	fira-verbose=, flto-compression-level=, fplugin-arg-): Use tab
	character between option name and help text.
	* c.opt (imultilib): Likewise.

2010-01-10  Rafael Avila de Espindola  <espindola@google.com>
