@@ -1,3 +1,8 @@
+2010-01-12  Joseph Myers  <joseph@codesourcery.com>
+
+	PR c/42708
+	* gcc.c-torture/compile/pr42708-1.c: New test.
+
 2010-01-12  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/42662
