@@ -1,3 +1,9 @@
+2010-01-12  Joseph Myers  <joseph@codesourcery.com>
+
+	PR c/42708
+	* c-typeck.c (build_c_cast): Fold value cast to union type before
+	wrapping it in a CONSTRUCTOR.
+
 2010-01-12  Jakub Jelinek  <jakub@redhat.com>
 
 	PR rtl-optimization/42699
